--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,16 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.container{
+/* .container{
   display: flex;
   flex-direction: column;
   text-align: center;
-}
+} */
 
 h1{
  font-size: 50px;
@@ -35,7 +38,7 @@ a{
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 20px;
   border-radius: 100px;
 }
 
@@ -52,3 +55,30 @@ a{
   background: none;
 }
 
+.blogcard{
+  width: 800px;
+  box-shadow:1px 2px 4px 5px  grey;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px
+}
+
+.blogs{
+  margin: auto, auto;
+}
+
+.siteheader{
+  height: 50px;
+  padding: 0 20px;
+  margin-bottom: 30px;
+  width: 800px;
+  background-color: #0777B9;
+}
+
+.full-blog{
+  width: 800px;
+  box-shadow:2px 2px 2px 2px  grey;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px
+}
