--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,3 +82,25 @@ a{
   margin: 10px;
   border-radius: 10px
 }
+
+/* ------ Comment section ---------- */
+
+.input{
+  width: 400px;
+}
+
+.user{
+  color: palevioletred;
+}
+
+.submitbutton{
+  margin-top: 10px;
+  border: #0777B9 solid 1px;
+  background-color: #0777B9;
+  border-radius: 100px;
+  width: 100px;
+  height: 40px;
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+}
