--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript' src='javascripts/bloagpage.js')
   body
     div(class="siteheader")
       a(href="/", class="homelogo") BlogSter
+      //- script(src="javascripts/blogpage.js") 
     block content
     
